Tests/Tiger.Build.Test/Compiler/Program_Tests/Errors/records_errors.cs
using NUnit.Framework;

// ReSharper disable InconsistentNaming

namespace Tiger.Build.Test
{
    [TestFixture]
    [Category("Program_Errors")]
    public class records_errors
    {
    }
}